Changed sql schema
Changed sql schema
Renamed player to user
Changed register DTO
