# server/Application/Interfaces/ISecurityService.cs
@@ -10,6 +10,6 @@ public interface ISecurityService
     public string GenerateSalt();
     public string GenerateJwt(JwtClaims claims);
     public AuthResponseDto Login(AuthRequestDto dto);
-    public AuthResponseDto Register(AuthRequestDto dto);
+    public AuthResponseDto Register(RegisterRequestDto dto);
     public JwtClaims VerifyJwtOrThrow(string jwt);
 }
