# server/Application/Services/SecurityService.cs
@@ -20,14 +20,13 @@ public class SecurityService(IOptionsMonitor<AppOptions> optionsMonitor, IDataRe
 {
     public AuthResponseDto Login(AuthRequestDto dto)
     {
-        var player = repository.GetUserOrNull(dto.Email) ?? throw new ValidationException("Username not found");
-        VerifyPasswordOrThrow(dto.Password + player.Salt, player.Hash);
+        var user = repository.GetUserOrNull(dto.Email) ?? throw new ValidationException("Wrong email or password");
+        VerifyPasswordOrThrow(dto.Password + user.PasswordSalt, user.PasswordHash);
         return new AuthResponseDto
         {
             Jwt = GenerateJwt(new JwtClaims
             {
-                Id = player.Id,
-                Role = player.Role,
+                Id = user.Id,
                 Exp = DateTimeOffset.UtcNow.AddHours(1000)
                     .ToUnixTimeSeconds()
                     .ToString(),
@@ -36,28 +35,27 @@ public class SecurityService(IOptionsMonitor<AppOptions> optionsMonitor, IDataRe
         };
     }
 
-    public AuthResponseDto Register(AuthRequestDto dto)
+    public AuthResponseDto Register(RegisterRequestDto dto)
     {
-        var player = repository.GetUserOrNull(dto.Email);
-        if (player is not null) throw new ValidationException("User already exists");
+        var user = repository.GetUserOrNull(dto.Email);
+        if (user is not null) throw new ValidationException("User already exists");
         var salt = GenerateSalt();
         var hash = HashPassword(dto.Password + salt);
-        var insertedPlayer = repository.AddUser(new User
+        var insertedUser = repository.AddUser(new User
         {
             Id = Guid.NewGuid().ToString(),
+            Name = dto.Name,
             Email = dto.Email,
-            Role = Constants.UserRole,
-            Salt = salt,
-            Hash = hash
+            PasswordSalt = salt,
+            PasswordHash = hash
         });
         return new AuthResponseDto
         {
             Jwt = GenerateJwt(new JwtClaims
             {
-                Id = insertedPlayer.Id,
-                Role = insertedPlayer.Role,
+                Id = insertedUser.Id,
                 Exp = DateTimeOffset.UtcNow.AddHours(1000).ToUnixTimeSeconds().ToString(),
-                Email = insertedPlayer.Email
+                Email = insertedUser.Email
             })
         };
     }
